--- a/templates/index.jade
+++ b/templates/index.jade
@@ -1,37 +1,59 @@
 extends layout
 
 block content
-	nav.navbar.navbar-default.navbar-fixed-bottom
-		div.container
-			div.embed-responsive(data-toggle='tooltip')
-				div#player
+    nav.navbar.navbar-default.navbar-fixed-bottom
+        div.container
+            div.embed-responsive(data-toggle='tooltip')
+                div#player
 
-	div.container.body
-		form(method='post', action='/playlist').add
-			div.row
-				div.col-lg-12
-					div.input-group
-						span.input-group-btn
-							button.btn.btn-default(type='submit') Add URL
-						input.form-control(type='url', name='url', placeholder='supports youtube, bandcamp, and tumblr audio', autofocus)
+    div.container.body
+        form(method='post', action='/playlist').add
+            div.row
+                div.col-lg-12
+                    div.input-group
+                        span.input-group-btn
+                            button.btn.btn-default(type='submit') Add URL
+                        input.form-control(required, type='url', name='url', placeholder='supports most audio/video streaming sites', autofocus)
 
-		div.table-responsive
-			table#playlist.table.table-bordered.table-hover.table-condensed
-				thead
-					tr
-						th.row-id
-						th.row-title='TITLE'
-						th.row-artist='ARTIST'
-				tbody
-					each track in playlist
-						tr
-							td.hideChild
-								p#id=track._id
-							td(title=track.title)=track.title
-							td(title=track.artist)=track.artist
+        div#message
+            - var messages = get_flashed_messages()
+            if messages
+                div.flashes.alert.alert-info.alert-dismissible(role='alert')
+                    button.close(type='button', data-dismiss='alert', aria-label='Close')
+                        span(aria-hidden='true')='x'
+                    each message in messages
+                        p=message
 
-	script(type='text/javascript').
-		var tag = document.createElement('script');
-		tag.src = "https://www.youtube.com/iframe_api";
-		var firstScriptTag = document.getElementsByTagName('script')[0];
-		firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+        div.table-responsive
+            table#playlist.table.table-bordered.table-hover.table-condensed
+                thead
+                    tr
+                        th.row-id#info
+                            a(href='https://github.com/rg3/youtube-dl/blob/master/docs/supportedsites.md', target='_blank', role='button', title='Supported Sites')
+                                span.glyphicon.glyphicon-info-sign(aria-hidden='true')
+                        th.row-title='TITLE'
+                        th.row-artist='ARTIST'
+                tbody
+                    each track in playlist
+                        tr
+                            td#delete
+                                a#id(role='button', title='Delete', data-toggle='modal', data-target='#deleteModal', data-trackid=track._id, data-title=track.title)
+                                    span.glyphicon.glyphicon-remove(aria-hidden='true')
+                            td#title(title=track.title)=track.title
+                            td#artist(title=track.artist)=track.artist
+
+        div.modal.fade#deleteModal(tabindex='-1', role='dialog', aria-labelledby='confirmationTitle')
+            div.modal-dialog(role='document')
+                div.modal-content
+                    div.modal-header
+                        button.close(type='button', data-dismiss='modal', aria-label="Close")
+                            span(aria-hidden='true')='x'
+                        h4.modal-title#confirmationTitle='Are you sure you want to delete this?'
+                    div.modal-body
+                        a.btn.btn-danger#confirmDelete(href='/delete/', type='button')='Confirm'
+
+    script(type='text/javascript').
+        var tag = document.createElement('script');
+        tag.src = "https://www.youtube.com/iframe_api";
+        var firstScriptTag = document.getElementsByTagName('script')[0];
+        firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
