stream audio from ydl, more status messages, use bower, misc.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,34 +1,10 @@
-#input {
-	width: 80%;
-	margin: 0 0 10px 0;
-}
-
-#playlist {
-    background-color: floralwhite;
-    table-layout: fixed;
-}
-
-#playlist tbody tr:hover {
-    cursor: pointer;
-}
-
-#playlist td {
-    overflow: hidden;
-    white-space: nowrap;
-}
-.row-id     { width: 35px;  }
-.row-title  { width: 70%; }
-.row-artist { width: 30%; }
-
 .container.body {
     padding-top: 15px;
     padding-bottom: 50px;
 }
-
 body {
     background-color: lightgray;
 }
-
 .navbar {
     height: 50px;
 }
@@ -39,25 +15,42 @@ body {
 
 audio {
     width: 100%;
+    height: 39px;
 }
-
 form.add {
     margin-bottom: 15px;
+}
+#input {
+	width: 80%;
+	margin: 0 0 10px 0;
 }
 
 .hidden {
     display: none;
 }
 
+#playlist {
+    background-color: floralwhite;
+    table-layout: fixed;
+}
+#playlist tbody tr:hover {
+    cursor: pointer;
+}
+#playlist tr {
+    height: 31px;
+}
+#playlist td {
+    overflow: hidden;
+    white-space: nowrap;
+}
+.row-id     { width: 35px;  }
+.row-title  { width: 70%; }
+.row-artist { width: 30%; }
 .hideChild > * {
     display: none;
 }
 
-#playlist tr {
-    height: 31px;
-}
-
-#delete, #info {
+#delete {
     -webkit-transition: color 0.2s false;
     -webkit-transition-delay: ease-in;
     -moz-transition: color 0.2s false ease-in;
@@ -66,39 +59,38 @@ form.add {
     font-size: 16px;
     padding: 4px 10px;
 }
-
-#message {
-    position: fixed;
-    margin: -10px auto;
-    left: 50px;
-    right: 50px;
-}
-
-#message .alert {
-    -webkit-box-shadow: 0 5px 15px rgba(0,0,0,.5);
-    box-shadow: 0 5px 15px rgba(0,0,0,.5);
-}
-
-.alert > p {
-    overflow-wrap: break-word;
-}
-
-.close {
-    opacity: 0.5;
-}
-
-.alert-dismissible .close {
-    color: black;
-}
-
-.close:hover {
-    opacity: 0.7;
-}
-
 #delete a {
     color: rgba(185, 3, 3, 0.63);
 }
 
 #delete a:hover {
     color: rgb(150, 3, 3);
+}
+
+#message {
+    position: fixed;
+    margin: -10px auto;
+    left: 0%;
+    right: 0%;
+    z-index: 10;
+}
+#message .alert {
+    -webkit-box-shadow: 0 5px 15px rgba(0,0,0,.5);
+    box-shadow: 0 5px 15px rgba(0,0,0,.5);
+    max-height: 150px;
+    overflow-wrap: break-word;
+    overflow: overlay;
+}
+.close {
+    opacity: 0.5;
+}
+.alert-dismissible .close {
+    color: black;
+}
+.close:hover {
+    opacity: 0.7;
+}
+
+#player {
+    height: 100%;
 }
