start unittests and use gunicorn

--- a/templates/index.jade
+++ b/templates/index.jade
@@ -56,4 +56,4 @@ block content
                         h4.modal-title#confirmationTitle='Are you sure you want to delete this?'
                     div.modal-body
                         form#confirmDelete(action='/', role='form')
-                            button.btn.btn-danger(type='button')='Confirm'
+                            button.btn.btn-danger(type='submit')='Confirm'
