--- a/static/css/index.css
+++ b/static/css/index.css
@@ -3,10 +3,12 @@
     padding-bottom: 50px;
 }
 body {
-    background-color: lightgray;
+    background-color: whitesmoke;
 }
 .navbar {
     height: 50px;
+    background-color: whitesmoke;
+    border-color: whitesmoke;
 }
 .embed-responsive {
     position: initial;
@@ -15,62 +17,55 @@ body {
 
 audio {
     width: 100%;
-    height: 39px;
+    height: 40px;
+    border: solid 4px lightsteelblue;
 }
-form.add {
+
+.input-group {
     margin-bottom: 15px;
-}
-#input {
-	width: 80%;
-	margin: 0 0 10px 0;
 }
 
 .hidden {
     display: none;
 }
 
-#playlist {
-    background-color: floralwhite;
+#playlist, .table {
     table-layout: fixed;
 }
-#playlist tbody tr:hover {
+
+#playlist tr:hover {
     cursor: pointer;
-}
-#playlist tr {
-    height: 31px;
+    background-color: lightsteelblue;
 }
 #playlist td {
     overflow: hidden;
     white-space: nowrap;
+    cursor: pointer;
 }
-.row-id     { width: 35px;  }
-.row-title  { width: 70%; }
-.row-artist { width: 30%; }
+.row-delete {width: 20px;}
+.row-track  { width: 15%; }
+.row-source { width: 50%; }
 .hideChild > * {
     display: none;
 }
 
-#delete {
+a.delete {
     -webkit-transition: color 0.2s false;
     -webkit-transition-delay: ease-in;
     -moz-transition: color 0.2s false ease-in;
     -o-transition: color 0.2s false ease-in;
     transition: color 0.15s ease-in;
-    font-size: 16px;
-    padding: 4px 10px;
-}
-#delete a {
+    display: none;
     color: rgba(185, 3, 3, 0.63);
 }
-
-#delete a:hover {
-    color: rgb(150, 3, 3);
+a.delete :hover {
+    color: rgb(86, 2, 2);
 }
 
 #message {
     position: fixed;
-    margin: -10px auto;
-    left: 0%;
+    margin: -50px auto;
+    left: 25%;
     right: 0%;
     z-index: 10;
 }
@@ -81,16 +76,28 @@ form.add {
     overflow-wrap: break-word;
     overflow: overlay;
 }
-.close {
-    opacity: 0.5;
-}
 .alert-dismissible .close {
     color: black;
+}
+.close {
+    opacity: 0.5;
 }
 .close:hover {
     opacity: 0.7;
 }
 
 #player {
-    height: 100%;
+    height: 10;
+}
+
+#playlist tr:hover .delete {
+    display: block;
+}
+
+.table-responsive {
+    border: 0;
+}
+
+.playing {
+    background-color: #b0c4dea1;
 }
