--- a/umq/static/css/index.css
+++ b/umq/static/css/index.css
@@ -41,6 +41,9 @@ audio {
     cursor: pointer;
     background-color: lightsteelblue;
 }
+#playlist tr.loading:hover {
+    background-color: #c5c1c1;
+}
 #playlist td {
     overflow: hidden;
     white-space: nowrap;
@@ -111,7 +114,7 @@ a.delete :hover {
 }
 
 .loading {
-    background-color: grey;
+    background-color: #c5c1c1;
 }
 
 .playing {
