Add multiple playlist functionality

--- a/umq/static/css/index.css
+++ b/umq/static/css/index.css
@@ -125,3 +125,11 @@ a.deleteConfirmation :hover {
 .playing {
     background-color: rgba(153, 189, 107, 0.64);
 }
+
+button a {
+    color: black;
+}
+button a:hover {
+    color: black;
+    text-decoration: none;
+}
