--- a/umq/templates/layout.html
+++ b/umq/templates/layout.html
@@ -12,6 +12,7 @@
     </script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="manifest" href="data:application/manifest+json;base64,eyJkaXNwbGF5IjoiYnJvd3NlciIsIm9yaWVudGF0aW9uIjoicG9ydHJhaXQifQ==">
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='node_modules/bootstrap/dist/css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
