--- a/umq-web/src/Components/Menu/Menu.css
+++ b/umq-web/src/Components/Menu/Menu.css
@@ -1,16 +1,7 @@
-.add-url-input {
-    padding: 1%;
-    background-color: whitesmoke;
+.navbar-fixed-top {
+    padding: 0 !important;
 }
 
-.input-group {
-    margin-bottom: 15px;
-}
-
-button a {
-    color: black;
-}
-button a:hover {
-    color: black;
-    text-decoration: none;
+thead {
+    background-color: floralwhite;
 }
